fix (configs maps) fix progressbar z-index

--- a/src/app/maps/maps.component.scss
+++ b/src/app/maps/maps.component.scss
@@ -59,6 +59,7 @@
     top: 0px;
     border-radius: none;
     background: none!important;
+    z-index: 1;
     .progressbar {
       background: $primary!important;
     }
